eks-best-practices/check-cluster-tags.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-cluster-tags
  annotations:
    policies.kyverno.io/title: Check Cluster Tags
    policies.kyverno.io/category: EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Cluster
    policies.kyverno.io/description: >-
      Required tags are missing on the cluster.  
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: check-department-tag
      match:
        any:
        - resources:
            kinds:
              - AWSAdapterConfig
      validate:
        message: "The `department` tag on the cluster is required. The field status.eksConfig.tags.department must exist with some value."
        pattern:
          status:
            eksCluster:
              tags:
                department: "?*"
