eks-best-practices/check-immutable-tags-ecr.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-immutable-tags-ecr
  annotations:
    policies.kyverno.io/title: Check Immutable Tags for ECR
    policies.kyverno.io/category: EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Cluster
    policies.kyverno.io/description: >-
      Immutable tags are not enabled on all ECR repositories.  
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: check-immutable-tag
      match:
        any:
        - resources:
            kinds:
              - AWSAdapterConfig
      validate:
        message: "The `imageTagMutable` field must set to true on all ECR repositories."
        foreach:
        - list: "request.object.status.ecrRepositories[]"
          pattern:
            imageTagMutable: true
