eks-best-practices/check-instance-profile-access.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-instance-profile-access
  annotations:
    policies.kyverno.io/title: Check Access to Instance Profile
    policies.kyverno.io/category: EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Cluster
    policies.kyverno.io/description: >-
      Restrict access to the instance profile assigned to nodes
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: check-instance-profile-access
      match:
        any:
        - resources:
            kinds:
              - AWSAdapterConfig
      validate:
        message: "Restrict access to the instance profile assigned to nodes"
        foreach:
        - list: "request.object.status.eksCluster.compute.reservations[]"
          pattern:
            instances:
            - httpPutResponseHopLimit: "!2"
