eks-best-practices/check-public-dns.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-public-dns
  annotations:
    policies.kyverno.io/title: Check Public DNSName
    policies.kyverno.io/category: EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Cluster
    policies.kyverno.io/description: >-
      Deploy workers onto private subnets. If a public DNSName exists, then it means the worker is deployed on a public subnet
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: check-public-dns
      match:
        any:
        - resources:
            kinds:
              - AWSAdapterConfig
      validate:
        message: "Deploy workers onto private subnets. If a public DNSName exists, then it means the worker is deployed on a public subnet."
        foreach:
        - list: "request.object.status.eksCluster.compute.reservations[]"
          pattern:
            instances:
            - X(publicDnsName): "null"
