eks-best-practices/check-vpc-flow-logs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-vpc-flow-logs
  annotations:
    policies.kyverno.io/title: Check VPC Flow Logs
    policies.kyverno.io/category: EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Cluster
    policies.kyverno.io/description: >-
      VPC Flow logs are not enabled.
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: check-vpc-flow-logs
      match:
        any:
        - resources:
            kinds:
              - AWSAdapterConfig
      validate:
        message: "Flow logs must be enabled for the VPC"
        pattern:
          status:
            eksCluster:
              networking:
                vpc:
                  flowLogsEnabled: true
